syntax = "proto3";

message GridGeometrySurface {
    repeated uint32 cell_indexes = 1;
    repeated uint32 polygon_indexes = 2;
    repeated double vertex_x = 3;
    repeated double vertex_y = 4;
    repeated double vertex_z = 5;
}

message GridStaticProperty {
    int64  id = 1;
    int64 owner = 2;
    string name = 3;
    string unit = 4;
    double min_value = 5;
    double max_value = 6;
    repeated double values = 7;
}